feat(api): implement OpenAPI configuration and update controllers
- Added OpenAPI configuration for API documentation and JWT authentication.
- Introduced new `AuthController` for user login functionality.
- Updated `ChapterController`, `CourseController`, `EnrollmentController`, `SectionController`, and `UserInfoController` to improve response handling and refactor DTO usage.
- Removed unused DTOs and entities to streamline the codebase.
- Upgraded `jjwt` dependencies to version 0.12.6 for enhanced security features.